# hop_and_barley

./: .gitignore  Dockerfile  LICENSE  ProjectM3.md  README.md  check_products.py  commits_history.txt  docker-compose.yml  pyproject.toml  simple_check.py  test_website.py
api/: serializers.py  urls.py  views.py
cart/: cart.py  urls.py  views.py
config/: context_processors.py  settings.py  urls.py
frontend_backup_20260210_1218/static/css/: style.css
frontend_backup_20260210_1218/static/js/: main.js
frontend_backup_20260210_1218/templates/: base.html  base_new.html
frontend_backup_20260210_1218/templates/cart/: cart_detail.html
frontend_backup_20260210_1218/templates/orders/: order_create.html  order_created.html  order_detail.html
frontend_backup_20260210_1218/templates/products/: product_detail.html
orders/: admin.py  forms.py  models.py  views.py
orders/migrations/: 0001_initial.py
products/: admin.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py
scripts/: check_urls.py  fix_prices.py  test_detail_pages.py  test_homepage.py
staticfiles/js/: main.js
templates/: base.html
templates/admin/: index.html
templates/cart/: cart.html  cart_detail.html
templates/includes/: footer.html  header.html
templates/products/: index.html.bak  index_content.html  product_detail.html  product_list.html
templates/users/: addresses.html  change_password.html  login.html  order_history.html  profile.html  register.html
users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+6 files in other folders)
